# Mandelbrot

./: CMakeLists.txt  main.cpp
MandelbrotApp/lib/cmake/raylib/: raylib-config-version.cmake  raylib-config.cmake
MandelbrotApp/lib/pkgconfig/: raylib.pc
